Fix GOV.UK compliance issues: Change 'approved' to 'recognised', add marketing consent checkbox

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                         required
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg text-gray-900 text-lg focus:ring-2 focus:ring-green-500 focus:border-transparent"
                     >
+                    <label class="flex items-start text-sm text-gray-600">
+                        <input type="checkbox" name="consent" required class="mt-1 mr-2">
+                        <span>I agree to receive marketing emails about MTD updates and SimpleMTD features. You can unsubscribe at any time.</span>
+                    </label>
                     <button 
                         type="submit"
                         class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg text-lg transition duration-200"
@@ -174,7 +178,7 @@
                     <p class="text-gray-700">Great! SimpleMTD works with accountants too. Save them time (and your money).</p>
                 </div>
                 <div class="bg-white rounded-lg p-6 shadow">
-                    <h3 class="font-bold text-lg mb-2">"Is it really HMRC approved?"</h3>
+                    <h3 class="font-bold text-lg mb-2">"Is it really HMRC recognised?"</h3>
                     <p class="text-gray-700">Yes. We're on HMRC's official MTD software list. 100% compliant.</p>
                 </div>
                 <div class="bg-white rounded-lg p-6 shadow">
@@ -216,6 +220,10 @@
                         required
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg text-gray-900 text-lg focus:ring-2 focus:ring-green-500 focus:border-transparent"
                     >
+                    <label class="flex items-start text-sm text-gray-600">
+                        <input type="checkbox" name="consent" required class="mt-1 mr-2">
+                        <span>I agree to receive marketing emails about MTD updates and SimpleMTD features. You can unsubscribe at any time.</span>
+                    </label>
                     <button 
                         type="submit"
                         class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg text-lg transition duration-200"
@@ -236,7 +244,8 @@
             <p>© 2025 SimpleMTD Ltd. All rights reserved.</p>
             <p class="mt-2">Company #12345678 | HMRC Recognised | 🔒 SSL Secured | 🇬🇧 UK Company</p>
             <p class="mt-2">
-                <a href="mailto:hello@simplemtd.co.uk" class="hover:text-white">hello@simplemtd.co.uk</a>
+                <a href="mailto:hello@simplemtd.co.uk" class="hover:text-white">hello@simplemtd.co.uk</a> | 
+                <a href="/privacy" class="hover:text-white">Privacy Policy</a>
             </p>
         </div>
     </footer>
