Add PECR-compliant consent language for sole trader marketing

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 </form>
                 <p class="text-center text-gray-500 text-sm mt-4">
                     Join 500+ businesses preparing for MTD<br>
-                    No spam. Unsubscribe anytime.
+                    By submitting, you agree to receive our MTD checklist and helpful updates about SimpleMTD.<br>
+                    Unsubscribe anytime. No spam.
                 </p>
             </div>
         </div>
@@ -224,7 +225,8 @@
                     </button>
                 </form>
                 <p class="text-gray-500 text-sm mt-4">
-                    No spam. Unsubscribe anytime. Your checklist arrives in 60 seconds.
+                    By submitting, you agree to receive our MTD checklist and helpful updates about SimpleMTD.<br>
+                    Your checklist arrives in 60 seconds. Unsubscribe anytime.
                 </p>
             </div>
         </div>
