Add Formspree integration and Supabase webhook for lead storage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <!-- Email Form -->
             <div class="bg-white rounded-lg p-6 shadow-xl">
-                <form id="email-form" class="space-y-4" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form id="email-form" class="space-y-4" action="https://formspree.io/f/xandvorq" method="POST">
                     <input 
                         type="email" 
                         name="email"
@@ -209,7 +209,7 @@
             <p class="text-xl mb-8">Enter your email to get your FREE MTD Readiness Checklist and secure your early bird spot.</p>
             
             <div class="bg-white rounded-lg p-6 shadow-xl max-w-md mx-auto">
-                <form id="email-form-bottom" class="space-y-4" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form id="email-form-bottom" class="space-y-4" action="https://formspree.io/f/xandvorq" method="POST">
                     <input 
                         type="email" 
                         name="email"
