Add automated MTD Readiness Checklist email delivery to new signups

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     }
                     
                     // Success state
-                    submitBtn.textContent = '✓ Success! Checklist coming soon';
+                    submitBtn.textContent = '✓ Check your email!';
                     submitBtn.classList.add('bg-green-600');
                     this.reset();
                     
