Fix privacy policy links to use .html extension

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <p class="mt-2">Company #12345678 | HMRC Recognised | 🔒 SSL Secured | 🇬🇧 UK Company</p>
             <p class="mt-2">
                 <a href="mailto:hello@simplemtd.co.uk" class="hover:text-white">hello@simplemtd.co.uk</a> | 
-                <a href="/privacy" class="hover:text-white">Privacy Policy</a>
+                <a href="/privacy.html" class="hover:text-white">Privacy Policy</a>
             </p>
         </div>
     </footer>
